# CM30225-Parallel-Computing-MPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
report/: Parallel CW2 Results - MPI Raw Results.csv  Report.aux  Report.tex  Report.tex.backup
src/: debug.h  main.c
src/benchmarking/: bmark.c  bmark.h
src/dispatcher/: dispatcher.c  dispatcher.h
src/matrix/: bmark.c  bmark.h  mat.c  mat.h  mat_factory.c  mat_factory.h  mat_itr.c  mat_itr.h  mat_smooth_parallel.c  mat_smooth_parallel.h  mat_smthr.c  mat_smthr.h  smoother.c  smoother.h  spool.c  spool.h
src/messaging/: msg_mngr.c  msg_mngr.h
src/smoothing/: dispatcher.c  dispatcher.h  smoother.c  smoother.h
src/spool/: dispatcher.c  dispatcher.h  spool.c  spool.h  spool_dispatch.c  spool_dispatch.h  spool_dispatcher.c  spool_dispatcher.h  spool_task.c  spool_task.h  spool_task_runner.c  spool_task_runner.h
src/~/jobs/: cw1-001-002-0.001000.slm
